# mmirano-talks

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
2025/2025-11-semana-computacion-cientifica/: veamer.tex
2025/2025-11-semana-computacion-cientifica/src/: tensor.html  tensor.ipynb
2025/nuevas-lineas-de-investigacion/: resumen.md  veamer.tex
2025/nuevas-lineas-de-investigacion/diagrams/: ml-model.drawio
2025/nuevas-lineas-de-investigacion/diagrams/auto-service-desk/: auto-service-desk-nn.drawio  auto-service-desk-sol.drawio  auto-service-desk-vectorizacion.drawio  auto-service-desk.drawio  logits.drawio
2025/nuevas-lineas-de-investigacion/diagrams/optimizacion-prog/: opt-prog-problem.drawio
2025/semana-computacion-cientifica/src/: utils.py
